Change in index.html andcss for a different zoom hover effect

--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
 				<a href="#">
 					<!-- <img class="img-responsive" src="http://placehold.it/972x720/5f9372/ffffff" alt=""> -->
 					<!-- <img class="img-responsive" src="img/beach-thumb-1-with-icon.jpg" alt=""> -->
-				<figure class="figure effect-zoom-color">
-					<img class="img-responsive" src="img/beach-thumb-1-2.jpg" alt="beach-thumb-1-with-icon.jpg"/>
+				<figure class="figure effect-zoom-color-border">
+					<!-- <img class="img-responsive" src="img/beach-thumb-1-2.jpg" alt="beach-thumb-1-with-icon.jpg"/> -->
+					<img class="img-responsive" src="img/beach-thumb-1-with-icon.jpg" alt="">
 					<figcaption class="figure-caption">
 						<h2>Sunny Beaches</h2>
-						<p>Explore beautiful sunny California Beaches</p>
+						<p>Explore beautiful sunny California Beaches. Enjoy the warmth of sunshine and waves.</p>
 					</figcaption>			
 				</figure>
 				</a>
@@ -75,21 +76,26 @@
 					<img class="img-responsive" src="http://placehold.it/972x720/3e788b/ffffff" alt="">
 				</a>
 			</div>
+			<div class="category-thumb col-lg-4 col-md-6 col-sm-6">
+				<a href="#">
+					<img class="img-responsive" src="http://placehold.it/972x720/b9e0ca/ffffff" alt="">
+				</a>
+			</div>
+			<div class="category-thumb col-lg-4 col-md-6 col-sm-6">
+				<a href="#">
+					<img class="img-responsive" src="http://placehold.it/972x720/f16e48/ffffff" alt="">
+				</a>
+			</div>
+			<div class="category-thumb col-lg-4 col-md-6 col-sm-6">
+				<a href="#">
+					<img class="img-responsive" src="http://placehold.it/972x720/dc686f/ffffff" alt="">
+				</a>
+			</div>
 			<!-- <div class="col-lg-4 col-md-6 col-sm-6">
 				<a href="#" class="thumbnail">
 					<img class="img-responsive img-portfolio img-hover" src="http://placehold.it/972x720" alt="">
 				</a>
-			</div>
-			<div class="col-lg-4 col-md-6 col-sm-6">
-				<a href="#" class="thumbnail">
-					<img class="img-responsive img-portfolio img-hover" src="http://placehold.it/972x720" alt="">
-				</a>
-			</div>
-			<div class="col-lg-4 col-md-6 col-sm-6">
-				<a href="#" class="thumbnail">
-					<img class="img-responsive img-portfolio img-hover" src="http://placehold.it/972x720" alt="">
-				</a>
-			</div> -->
+			</div>-->
 	</div> <!-- close .row -->
 </div><!-- close travel-categoty -->
 <!-- Map Section -->
