created img/thum for thumbnail images and updated index.html with thumbnails

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<!-- <img class="img-responsive" src="img/beach-thumb-1-with-icon.jpg" alt=""> -->
 				<figure class="figure effect-zoom-color-border">
 					<!-- <img class="img-responsive" src="img/beach-thumb-1-2.jpg" alt="beach-thumb-1-with-icon.jpg"/> -->
-					<img class="img-responsive" src="img/beach-thumb-1-with-icon.jpg" alt="">
+					<img class="img-responsive" src="img/thumb/beach-thumb-with-icon.jpg" alt="">
 					<figcaption class="figure-caption">
 						<h2>Sunny Beaches</h2>
 						<p>Explore beautiful sunny California Beaches. Enjoy the warmth of sunshine and waves.</p>
@@ -53,49 +53,59 @@
 			</div>
 			<div class="category-thumb col-lg-4 col-md-6 col-sm-6">
 				<a href="#">
-					<img class="img-responsive" src="http://placehold.it/972x720/b9e0ca/ffffff" alt="">
+					<img class="img-responsive" src="img/thumb/city-thumb-with-icon.jpg" alt="">
 				</a>
 			</div>
 			<div class="category-thumb col-lg-4 col-md-6 col-sm-6">
 				<a href="#">
-					<img class="img-responsive" src="http://placehold.it/972x720/f16e48/ffffff" alt="">
+					<img class="img-responsive" src="img/thumb/winery-thumb-with-icon.jpg" alt="">
 				</a>
 			</div>
 			<div class="category-thumb col-lg-4 col-md-6 col-sm-6">
 				<a href="#">
-					<img class="img-responsive" src="http://placehold.it/972x720/dc686f/ffffff" alt="">
+					<img class="img-responsive" src="img/thumb/food-thumb-with-icon.jpg" alt="">
 				</a>
 			</div>
 			<div class="category-thumb col-lg-4 col-md-6 col-sm-6">
 				<a href="#">
-					<img class="img-responsive" src="http://placehold.it/972x720/245772/ffffff" alt="">
+					<img class="img-responsive" src="img/thumb/mountain-thumb-with-icon.jpg" alt="">
 				</a>
 			</div>
 			<div class="category-thumb col-lg-4 col-md-6 col-sm-6">
 				<a href="#">
-					<img class="img-responsive" src="http://placehold.it/972x720/3e788b/ffffff" alt="">
+					<img class="img-responsive" src="img/thumb/lake-thumb-with-icon.jpg" alt="">
 				</a>
 			</div>
 			<div class="category-thumb col-lg-4 col-md-6 col-sm-6">
 				<a href="#">
-					<img class="img-responsive" src="http://placehold.it/972x720/b9e0ca/ffffff" alt="">
+					<img class="img-responsive" src="img/thumb/hiking-thumb-with-icon.jpg" alt="">
 				</a>
 			</div>
 			<div class="category-thumb col-lg-4 col-md-6 col-sm-6">
 				<a href="#">
-					<img class="img-responsive" src="http://placehold.it/972x720/f16e48/ffffff" alt="">
+					<img class="img-responsive" src="img/thumb/surfing-thumb-with-icon.jpg" alt="">
 				</a>
 			</div>
 			<div class="category-thumb col-lg-4 col-md-6 col-sm-6">
 				<a href="#">
-					<img class="img-responsive" src="http://placehold.it/972x720/dc686f/ffffff" alt="">
+					<img class="img-responsive" src="img/thumb/themepark-thumb-with-icon.jpg" alt="">
 				</a>
 			</div>
-			<!-- <div class="col-lg-4 col-md-6 col-sm-6">
-				<a href="#" class="thumbnail">
-					<img class="img-responsive img-portfolio img-hover" src="http://placehold.it/972x720" alt="">
+			<div class="category-thumb col-lg-4 col-md-6 col-sm-6">
+				<a href="#">
+					<img class="img-responsive" src="img/thumb/camp-thumb-with-icon.jpg" alt="">
 				</a>
-			</div>-->
+			</div>
+			<div class="category-thumb col-lg-4 col-md-6 col-sm-6">
+				<a href="#">
+					<img class="img-responsive" src="img/thumb/museum-thumb-with-icon.jpg" alt="">
+				</a>
+			</div>
+			<div class="category-thumb col-lg-4 col-md-6 col-sm-6">
+				<a href="#">
+					<img class="img-responsive" src="img/thumb/ski-thumb-with-icon.jpg" alt="">
+				</a>
+			</div>
 	</div> <!-- close .row -->
 </div><!-- close travel-categoty -->
 <!-- Map Section -->
