--- a/category-beach.html
+++ b/category-beach.html
@@ -58,11 +58,11 @@
 			<a href="#fbsection4">Section 4</a>
 			<a href="#fbsection5">Section 5</a>
 		</nav>
-		<section id="fbsection1"></section>
-		<section id="fbsection2"></section>
-		<section id="fbsection3"></section>
-		<section id="fbsection4"></section>
-		<section id="fbsection5"></section>
+		<section id="fbsection1">hello1</section>
+		<section id="fbsection2">hello 2</section>
+		<section id="fbsection3">hello 3</section>
+		<section id="fbsection4">hello 4</section>
+		<section id="fbsection5">hello 5</section>
 	</div>
 	<!-- Bootstrap Javascript from CDN -->
 	<!-- Jquery is necessary before using javascript for bootstrap -->
