hover effects changes

--- a/category-beach-test-1.html
+++ b/category-beach-test-1.html
@@ -33,15 +33,15 @@
 		<div class="nav-toggle">
 			<div class="menu">
 				<ul>
-					<li class="hidden"><a href="#"><img src="img/a.svg"></a></li>
-					<li class="hidden"><a href="#"><img src="img/b.svg"></a></li>
-					<li class="hidden"><a href="#"><img src="img/c.svg"></a></li>
-					<li class="hidden"><a href="#"><img src="img/a.svg"></a></li>
-					<li class="hidden"><a href="#"><img src="img/b.svg"></a></li>
-					<li class="hidden"><a href="#"><img src="img/c.svg"></a></li>
-					<li class="hidden"><a href="#"><img src="img/a.svg"></a></li>
-					<li class="hidden"><a href="#"><img src="img/b.svg"></a></li>
-					<li class="hidden"><a href="#"><img src="img/c.svg"></a></li>
+					<li class="hidden_1"><a href="#"><img src="img/a.svg"></a></li>
+					<li class="hidden_1"><a href="#"><img src="img/b.svg"></a></li>
+					<li class="hidden_1"><a href="#"><img src="img/c.svg"></a></li>
+					<li class="hidden_1"><a href="#"><img src="img/a.svg"></a></li>
+					<li class="hidden_1"><a href="#"><img src="img/b.svg"></a></li>
+					<li class="hidden_1"><a href="#"><img src="img/c.svg"></a></li>
+					<li class="hidden_1"><a href="#"><img src="img/a.svg"></a></li>
+					<li class="hidden_1"><a href="#"><img src="img/b.svg"></a></li>
+					<li class="hidden_1"><a href="#"><img src="img/c.svg"></a></li>
 				</ul>
 			</div><!-- .menu -->
 		</div><!-- .nav-toggle -->
