hero image css transition effect

--- a/index.html
+++ b/index.html
@@ -27,12 +27,24 @@
 	<!-- weather overlay widget will go here	 -->
 </header>
 <!-- Hero section - Jumbotron -->
-<div id="hero" class="jumbotron">
+<!-- <div id="hero" class="jumbotron">
 	<div class="container">
 		<h1>Roadtrip California</h1>
 		<p class="text-center">Endless sunshine, amazing cities, best-in-class theme parks and incredible natural treasures.</p>
 	</div>	
-</div>
+</div> -->
+<section class="sect-banner">
+	<!-- Slider animation -->
+	<ul class="kf-slider">
+		<li></li>
+		<li></li>
+		<li></li>
+	</ul>
+	<div class="v-center">
+		<h1>Roadtrip California</h1>
+		<p>Endless sunshine, amazing cities, best-in-class theme parks and incredible natural treasures</p>	
+	</div>
+</section>
 <!-- Category Section -->
 <div id="travel-category">
 	<div class="row">
