Change city htmland now the menu works

--- a/category-beach.html
+++ b/category-beach.html
@@ -27,7 +27,7 @@
 	<div class="menu_trigger">
 
     <input type="checkbox" id="nav-trigger" class="nav-trigger">
-	<label for="nav-trigger" onclick="" ontouchstart="" class="on" style="transform: translateX(20px); margin-top:-80px;"></label>
+	<label for="nav-trigger" onclick="" ontouchstart="" class="on" style="transform: translateX(-80px);"></label>
 
 
 		<ul class="navigation">
@@ -53,11 +53,11 @@
 			<a href="#fbsection4">Section 4</a>
 			<a href="#fbsection5">Section 5</a>
 		</nav>
-		<section id="fbsection1">hello1</section>
-		<section id="fbsection2">hello 2</section>
-		<section id="fbsection3">hello 3</section>
-		<section id="fbsection4">hello 4</section>
-		<section id="fbsection5">hello 5</section>
+		<section id="fbsection1"></section>
+		<section id="fbsection2"></section>
+		<section id="fbsection3"></section>
+		<section id="fbsection4"></section>
+		<section id="fbsection5"></section>
 	</div>
 
 	<!-- Bootstrap Javascript from CDN -->
