--- a/category-beach-test-1.html
+++ b/category-beach-test-1.html
@@ -7,8 +7,8 @@
 	<!-- Typekit font - Museo Slab for Headline & Museo Sans Rounded for bodycopy -->
 	<script src="https://use.typekit.net/dbk3mqr.js"></script>
 	<script>try{Typekit.load({ async: true });}catch(e){}</script>
-	<!-- <script src="js/b.js">
-		</script> -->
+	<script src="js/b.js">
+		</script>
 
 	<!-- Google fonts for secondary uses. Arvo for headline & Nuneto for bodycopy -->
 	<link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
@@ -25,7 +25,7 @@
 <body>
 	<!-- Codrops code: http://tympanus.net/codrops/2013/05/02/fixed-background-scrolling-layout/ -->
 	<div class="toggle-main">
-		<b href="#" class="b">
+		<b href=#>
 		  <span></span>
 		  <span></span>
 		  <span></span>
@@ -33,7 +33,7 @@
 		<div class="nav-toggle">
 			<div class="menu">
 				<ul>
-					<li class="hidden_1"><a href="#">Home</a></li>
+					<li class="hidden_1"><a href="#"><img src="img/a.svg"></a></li>
 					<li class="hidden_1"><a href="#"><img src="img/b.svg"></a></li>
 					<li class="hidden_1"><a href="#"><img src="img/c.svg"></a></li>
 					<li class="hidden_1"><a href="#"><img src="img/a.svg"></a></li>
@@ -46,26 +46,24 @@
 			</div><!-- .menu -->
 		</div><!-- .nav-toggle -->
 	</div><!-- .toggle-main -->
-	<!-- <code>
+	<code>
   	clicking on "b" toggles class "open" on "b"
-	</code> -->
-
+	</code>
 	<div id="cbp-fbscroller" class="cbp-fbscroller">
 	
 		<nav>
-			<a href="#ctsection1" class="cbp-fbcurrent">Section 1</a>
-			<a href="#ctsection2">Section 2</a>
-			<a href="#ctsection3">Section 3</a>
-			<a href="#ctsection4">Section 4</a>
-			<a href="#ctsection5">Section 5</a>
+			<a href="#fbsection1" class="cbp-fbcurrent">Section 1</a>
+			<a href="#fbsection2">Section 2</a>
+			<a href="#fbsection3">Section 3</a>
+			<a href="#fbsection4">Section 4</a>
+			<a href="#fbsection5">Section 5</a>
 		</nav>
-		<section id="ctsection1"></section>
-		<section id="ctsection2"></section>
-		<section id="ctsection3"></section>
-		<section id="ctsection4"></section>
-		<section id="ctsection5"></section>
+		<section id="fbsection1"></section>
+		<section id="fbsection2"></section>
+		<section id="fbsection3"></section>
+		<section id="fbsection4"></section>
+		<section id="fbsection5"></section>
 	</div>
-
 	<!-- Bootstrap Javascript from CDN -->
 	<!-- Jquery is necessary before using javascript for bootstrap -->
 	<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
@@ -82,17 +80,7 @@
 		<script>
 			$(function() {
 				cbpFixedScrollLayout.init();
-				$(".b").on("click",function(e){
-					e.preventDefault();
-					$("body").addClass("open");
-				});
-				$(".cbp-fbscroller").on("click",function(){
-					if($("body").hasClass("open")) $("body").removeClass("open");
-				})
 			});
 		</script>
-		<!-- <script src="js/classie.js"></script>
-		<script src="js/sidebarEffects.js"></script>
-		-->
 </body>
 </html>
