--- a/category-city.html
+++ b/category-city.html
@@ -49,7 +49,7 @@
 	<!-- <code>
   	clicking on "b" toggles class "open" on "b"
 	</code> -->
-
+	<div class="transparent-overlay"></div>
 	<div id="cbp-fbscroller" class="cbp-fbscroller">
 	
 		<nav>
@@ -65,6 +65,12 @@
 		<section id="ctsection4"></section>
 		<section id="ctsection5"></section>
 	</div>
+
+
+
+	<!-- <div class="transparent-overlay"></div> -->
+
+
 
 	<!-- Bootstrap Javascript from CDN -->
 	<!-- Jquery is necessary before using javascript for bootstrap -->
@@ -86,7 +92,7 @@
 					e.preventDefault();
 					$("body").addClass("open");
 				});
-				$(".cbp-fbscroller").on("click",function(){
+				$(".cbp-fbscroller, .transparent-overlay").on("click",function(){
 					if($("body").hasClass("open")) $("body").removeClass("open");
 				})
 			});
