--- a/category-city.html
+++ b/category-city.html
@@ -49,7 +49,9 @@
 	<!-- <code>
   	clicking on "b" toggles class "open" on "b"
 	</code> -->
-
+	<div class="transparent-overlay">
+		
+	</div><!-- .transparent-overlay -->
 	<div id="cbp-fbscroller" class="cbp-fbscroller">
 	
 		<nav>
@@ -80,13 +82,23 @@
 		<!-- Codrops Javascript for fixed background parallax -->
 		<script src="js/cbpFixedScrollLayout.min.js"></script>
 		<script>
+			// $(function() {
+			// 	cbpFixedScrollLayout.init();
+			// 	$(".b").on("click",function(e){
+			// 		e.preventDefault();
+			// 		$("body").addClass("open");
+			// 	});
+			// 	$(".cbp-fbscroller").on("click",function(){
+			// 		if($("body").hasClass("open")) $("body").removeClass("open");
+			// 	})
+			// });
 			$(function() {
 				cbpFixedScrollLayout.init();
 				$(".b").on("click",function(e){
 					e.preventDefault();
 					$("body").addClass("open");
 				});
-				$(".cbp-fbscroller").on("click",function(){
+				$(".cbp-fbscroller, .transparent-overlay").on("click",function(){
 					if($("body").hasClass("open")) $("body").removeClass("open");
 				})
 			});
