fix the merged code from Sai pull request

--- a/category-city-v2.html
+++ b/category-city-v2.html
@@ -62,7 +62,7 @@
 			<a href="#ctsection5">Section 5</a>
 		</nav>
 		<section id="ctsection1">
-			<div class="Pop-trigger v-center">
+			<div class="Pop-trigger v-center2">
 				<a class="js-open-modal btn" href="#" data-modal-id="popup1"> Los angeles </a> 
 			</div>
 			<div id="popup1" class="modal-box">
@@ -76,7 +76,7 @@
 			</div>
 		</section>
 		<section id="ctsection2">
-			<div class="Pop-trigger v-center">
+			<div class="Pop-trigger v-center2">
 				<a class="js-open-modal btn" href="#" data-modal-id="popup2"> San Francisco </a> 
 			</div>
 			<div id="popup2" class="modal-box">
@@ -89,7 +89,7 @@
 			</div>
 		</section>
 		<section id="ctsection3">
-			<div class="Pop-trigger v-center">
+			<div class="Pop-trigger v-center2">
 				<a class="js-open-modal btn" href="#" data-modal-id="popup3"> Sacramento </a> 
 			</div>
 			<div id="popup3" class="modal-box">
@@ -102,7 +102,7 @@
 			</div>
 		</section>
 		<section id="ctsection4">
-			<div class="Pop-trigger v-center">
+			<div class="Pop-trigger v-center2">
 				<a class="js-open-modal btn" href="#" data-modal-id="popup4"> San Joes </a> 
 			</div>
 			<div id="popup4" class="modal-box">
@@ -115,7 +115,7 @@
 			</div>
 		</section>
 		<section id="ctsection5">
-			<div class="Pop-trigger v-center">
+			<div class="Pop-trigger v-center2">
 				<a class="js-open-modal btn" href="#" data-modal-id="popup5"> San Diego </a> 
 			</div>
 			<div id="popup5" class="modal-box">
