--- a/category-food.html
+++ b/category-food.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Roadtrip California, Sunny Beaches</title>
+	<title>Roadtrip California, Yummy Foods</title>
 
 	<!-- Typekit font - Museo Slab for Headline & Museo Sans Rounded for bodycopy -->
 	<script src="https://use.typekit.net/dbk3mqr.js"></script>
@@ -63,11 +63,11 @@
 		</nav>
 		<section id="ctsection1">
 			<div class="Pop-trigger v-center2">
-				<a class="js-open-modal btn" href="#" data-modal-id="popup1"> Los angeles </a> 
+				<a class="js-open-modal btn" href="#" data-modal-id="popup1"> Food Truck  </a> 
 			</div>
 			<div id="popup1" class="modal-box">
 			  <div class="modal-header"> <a href="#" class="js-modal-close close">×</a>
-			    <h3>Los Angeles</h3>
+			    <h3>Food Truck</h3>
 			  </div>
 			  <div class="modal-body">
 			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut commodo at felis vitae facilisis. Cras volutpat fringilla nunc vitae hendrerit. Donec porta id augue quis sodales. Sed sit amet metus ornare, mattis sem at, dignissim arcu. Cras rhoncus ornare mollis. Ut tempor augue mi, sed luctus neque luctus non. Vestibulum mollis tristique blandit. Aenean condimentum in leo ac feugiat. Sed posuere, est at eleifend suscipit, erat ante pretium turpis, eget semper ex risus nec dolor. Etiam pellentesque nulla neque, ut ullamcorper purus facilisis at. Nam imperdiet arcu felis, eu placerat risus dapibus sit amet. Praesent at justo at lectus scelerisque mollis. Mauris molestie mattis tellus ut facilisis. Sed vel ligula ornare, posuere velit ornare, consectetur erat.
@@ -77,11 +77,11 @@
 		</section>
 		<section id="ctsection2">
 			<div class="Pop-trigger v-center2">
-				<a class="js-open-modal btn" href="#" data-modal-id="popup2"> San Francisco </a> 
+				<a class="js-open-modal btn" href="#" data-modal-id="popup2"> In & Out </a> 
 			</div>
 			<div id="popup2" class="modal-box">
 			  <div class="modal-header"> <a href="#" class="js-modal-close close">×</a>
-			    <h3>San Francisco</h3>
+			    <h3>In & Out</h3>
 			  </div>
 			  <div class="modal-body">
 			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut commodo at felis vitae facilisis. Cras volutpat fringilla nunc vitae hendrerit. Donec porta id augue quis sodales. Sed sit amet metus ornare, mattis sem at, dignissim arcu. Cras rhoncus ornare mollis. Ut tempor augue mi, sed luctus neque luctus non. Vestibulum mollis tristique blandit. Aenean condimentum in leo ac feugiat. Sed posuere, est at eleifend suscipit, erat ante pretium turpis, eget semper ex risus nec dolor. Etiam pellentesque nulla neque, ut ullamcorper purus facilisis at. Nam imperdiet arcu felis, eu placerat risus dapibus sit amet. Praesent at justo at lectus scelerisque mollis. Mauris molestie mattis tellus ut facilisis. Sed vel ligula ornare, posuere velit ornare, consectetur erat.</p>
@@ -90,11 +90,11 @@
 		</section>
 		<section id="ctsection3">
 			<div class="Pop-trigger v-center2">
-				<a class="js-open-modal btn" href="#" data-modal-id="popup3"> Sacramento </a> 
+				<a class="js-open-modal btn" href="#" data-modal-id="popup3"> Dungeness Crab </a> 
 			</div>
 			<div id="popup3" class="modal-box">
 			  <div class="modal-header"> <a href="#" class="js-modal-close close">×</a>
-			    <h3>Sacramento</h3>
+			    <h3>Dungeness Crab</h3>
 			  </div>
 			  <div class="modal-body">
 			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut commodo at felis vitae facilisis. Cras volutpat fringilla nunc vitae hendrerit. Donec porta id augue quis sodales. Sed sit amet metus ornare, mattis sem at, dignissim arcu. Cras rhoncus ornare mollis. Ut tempor augue mi, sed luctus neque luctus non. Vestibulum mollis tristique blandit. Aenean condimentum in leo ac feugiat. Sed posuere, est at eleifend suscipit, erat ante pretium turpis, eget semper ex risus nec dolor. Etiam pellentesque nulla neque, ut ullamcorper purus facilisis at. Nam imperdiet arcu felis, eu placerat risus dapibus sit amet. Praesent at justo at lectus scelerisque mollis. Mauris molestie mattis tellus ut facilisis. Sed vel ligula ornare, posuere velit ornare, consectetur erat.</p>
@@ -103,11 +103,11 @@
 		</section>
 		<section id="ctsection4">
 			<div class="Pop-trigger v-center2">
-				<a class="js-open-modal btn" href="#" data-modal-id="popup4"> San Joes </a> 
+				<a class="js-open-modal btn" href="#" data-modal-id="popup4"> Sushi </a> 
 			</div>
 			<div id="popup4" class="modal-box">
 			  <div class="modal-header"> <a href="#" class="js-modal-close close">×</a>
-			    <h3>San Joes</h3>
+			    <h3>Sushi</h3>
 			  </div>
 			  <div class="modal-body">
 			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut commodo at felis vitae facilisis. Cras volutpat fringilla nunc vitae hendrerit. Donec porta id augue quis sodales. Sed sit amet metus ornare, mattis sem at, dignissim arcu. Cras rhoncus ornare mollis. Ut tempor augue mi, sed luctus neque luctus non. Vestibulum mollis tristique blandit. Aenean condimentum in leo ac feugiat. Sed posuere, est at eleifend suscipit, erat ante pretium turpis, eget semper ex risus nec dolor. Etiam pellentesque nulla neque, ut ullamcorper purus facilisis at. Nam imperdiet arcu felis, eu placerat risus dapibus sit amet. Praesent at justo at lectus scelerisque mollis. Mauris molestie mattis tellus ut facilisis. Sed vel ligula ornare, posuere velit ornare, consectetur erat.</p>
@@ -116,11 +116,11 @@
 		</section>
 		<section id="ctsection5">
 			<div class="Pop-trigger v-center2">
-				<a class="js-open-modal btn" href="#" data-modal-id="popup5"> San Diego </a> 
+				<a class="js-open-modal btn" href="#" data-modal-id="popup5"> Pho </a> 
 			</div>
 			<div id="popup5" class="modal-box">
 			  <div class="modal-header"> <a href="#" class="js-modal-close close">×</a>
-			    <h3>San Dieto</h3>
+			    <h3>Pho at Little Saigon</h3>
 			  </div>
 			  <div class="modal-body">
 			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut commodo at felis vitae facilisis. Cras volutpat fringilla nunc vitae hendrerit. Donec porta id augue quis sodales. Sed sit amet metus ornare, mattis sem at, dignissim arcu. Cras rhoncus ornare mollis. Ut tempor augue mi, sed luctus neque luctus non. Vestibulum mollis tristique blandit. Aenean condimentum in leo ac feugiat. Sed posuere, est at eleifend suscipit, erat ante pretium turpis, eget semper ex risus nec dolor. Etiam pellentesque nulla neque, ut ullamcorper purus facilisis at. Nam imperdiet arcu felis, eu placerat risus dapibus sit amet. Praesent at justo at lectus scelerisque mollis. Mauris molestie mattis tellus ut facilisis. Sed vel ligula ornare, posuere velit ornare, consectetur erat.</p>
