moving text effect

--- a/index.html
+++ b/index.html
@@ -256,7 +256,18 @@
     <div class="overlayheadlines">
     	<div class="headlines">
     		<div class="container">
-    			<h2>Explore the wild adventure of California Roadtrip</h2>
+    			<!-- <h2>Explore the wild adventure of California Roadtrip</h2> -->
+    			<!-- <section class="cd-intro"> -->
+				<h1 class="cd-headline rotate-1">
+					<span>Enjoy the adventure of California</span>
+					<span class="cd-words-wrapper">
+						<b class="is-visible">Beaches</b>
+						<b>Cities</b>
+						<b>Food</b>
+						<b>Wine</b>
+					</span>
+				</h1>
+				<!-- </section> --> <!-- cd-intro -->
     		</div>
     	</div>
     </div>
@@ -299,6 +310,6 @@ if($(window).width() > 599 && !isIEOld && !isiPad) {
 
 $('.video').prepend(el);
 </script>
-
+<script src="js/text-effect.js"></script>
 </body>
 </html>
