--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 	<!-- these is the optional bootstrap theme cdn -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/font-awesome-animation.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.min.css">
+
 
 </head>
 <body>
@@ -44,6 +46,10 @@
 		<h1>Roadtrip California</h1>
 		<p>Endless sunshine, amazing cities, best-in-class theme parks and incredible natural treasures</p>	
 	</div>
+	<!--This part is icon moving--> 
+ <a class="moving-arrow" href="#travel-category">
+ 	<div class="icon faa-float animated"><i class="fa fa-angle-double-down"></i></div>
+ </a>
 </section>
 <!-- Category Section -->
 <div id="travel-category">
