--- a/category-beach.html
+++ b/category-beach.html
@@ -33,7 +33,7 @@
 		<div class="nav-toggle">
 			<div class="menu">
 				<ul>
-					<li class="hidden_1"><a href="#"><svg version="1.1" id="home" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+					<li class="hidden_1"><a href="index.html"><svg version="1.1" id="home" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
 <path fill="none" stroke="#FFFFFF" stroke-miterlimit="10" d="M71,38.9V26.3c0-0.4-0.4-0.7-0.8-0.7H63c-0.4,0-0.8,0.3-0.8,0.7v3.5
 	c0,0.6-0.8,0.9-1.3,0.5l-10.4-9.2c-0.3-0.3-0.8-0.3-1.1,0l-29.3,26c-0.5,0.4-0.2,1.2,0.6,1.2h7c0.4,0,0.8,0.3,0.8,0.7v29.2
