show more/hide section(index.html, theme and main.js) and category page links added

--- a/category-city.html
+++ b/category-city.html
@@ -25,11 +25,11 @@
 <body>
 	<!-- Codrops code: http://tympanus.net/codrops/2013/05/02/fixed-background-scrolling-layout/ -->
 	<div class="toggle-main">
-		<b href="#" class="b">
+		<a href="#" class="b">
 		  <span></span>
 		  <span></span>
 		  <span></span>
-		</b>
+		</a>
 		<div class="nav-toggle">
 			<div class="menu">
 				<ul>
@@ -43,7 +43,7 @@
 	C71.1,39.3,71,39.1,71,38.9z"/>
 </svg>
 </a></li>
-					<li class="hidden_1"><a href="#"><svg version="1.1" id="beach" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+					<li class="hidden_1"><a href="category-beach.html"><svg version="1.1" id="beach" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
 <g>
 	<path fill="none" stroke="#FFFFFF" stroke-miterlimit="10" d="M22.9,70.5h59.2c0,0-9.7-13.7-29.2-13.6c-6.2,0-11.2,0.8-15.2,2.1
@@ -57,7 +57,7 @@
 
 
 </a></li>
-					<li class="hidden_1"><a href="#"><svg version="1.1" id="city" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+					<li class="hidden_1"><a href="category-city.html"><svg version="1.1" id="city" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
 <path fill="none" stroke="#FFFFFF" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M20,90.5h49
 	 M47.5,45.5h-23v45h23V45.5z M33.5,50.5h-5v5h5V50.5z M43.5,50.5h-5v5h5V50.5z M33.5,59.5h-5v5h5V59.5z M43.5,59.5h-5v5h5V59.5z
@@ -67,7 +67,7 @@
 </svg>
 
 </a></li>
-					<li class="hidden_1"><a href="#"><svg version="1.1" id="wine" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+					<li class="hidden_1"><a href="category-wine.html"><svg version="1.1" id="wine" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
 <g>
 	<path fill="none" stroke="#FFFFFF" stroke-linecap="round" stroke-miterlimit="10" d="M41.9,28.6v-8.5h2v-2.9H33.7v2.9h2v11.2
@@ -81,7 +81,7 @@
 	</g>
 </g>
 </svg></a></li>
-					<li class="hidden_1"><a href="#"><svg version="1.1" id="food" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+					<li class="hidden_1"><a href="category-food.html"><svg version="1.1" id="food" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
 <path fill="none" stroke="#FFFFFF" stroke-miterlimit="10" d="M71.7,73.8H22.2c-1.2,0-2.2-1-2.2-2.2l0,0c0-1.2,1-2.2,2.2-2.2h49.5
 	c1.2,0,2.2,1,2.2,2.2l0,0C73.9,72.8,72.9,73.8,71.7,73.8z M57.3,56.5c3.2,0.6,7.2-0.3,10.3-2.5c1.8-1.3,3.3-3.1,4-5.2
