--- a/category-city.html
+++ b/category-city.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Roadtrip California, Sunny Beaches</title>
+	<title>Roadtrip California, citylife </title>
 
 	<!-- Typekit font - Museo Slab for Headline & Museo Sans Rounded for bodycopy -->
 	<script src="https://use.typekit.net/dbk3mqr.js"></script>
@@ -158,7 +158,6 @@
 			<a href="#ctsection5">Section 5</a>
 		</nav>
 		<section id="ctsection1">
-			<div class="gradient-1">
 				<div class="Pop-trigger v-center2">
 					<a class="js-open-modal btn" href="#" data-modal-id="popup1"> Los angeles </a> 
 				</div>
@@ -173,10 +172,9 @@
 
 				  </div>
 				</div>
-			</div>
 		</section>
 		<section id="ctsection2">
-			<div class="gradient-2">
+			
 				<div class="Pop-trigger v-center2">
 					<a class="js-open-modal btn" href="#" data-modal-id="popup2"> San Francisco </a> 
 				</div>
@@ -191,10 +189,10 @@
 					</p>
 				  </div>
 				</div>
-			</div>
+			
 		</section>
 		<section id="ctsection3">
-			<div class="gradient-1">
+			
 				<div class="Pop-trigger v-center2">
 					<a class="js-open-modal btn" href="#" data-modal-id="popup3"> Sacramento </a> 
 				</div>
@@ -209,10 +207,10 @@
 				    </p>
 				  </div>
 				</div>
-			</div>
+			
 		</section>
 		<section id="ctsection4">
-			<div class="gradient-2">
+			
 			<div class="Pop-trigger v-center2">
 				<a class="js-open-modal btn" href="#" data-modal-id="popup4"> San Joes </a> 
 			</div>
@@ -227,16 +225,16 @@
 			    </p>
 			  </div>
 			</div>
-			</div>
+			
 		</section>
 		<section id="ctsection5">
-			<div class="gradient-1">
+			
 				<div class="Pop-trigger v-center2">
 					<a class="js-open-modal btn" href="#" data-modal-id="popup5"> San Diego </a> 
 				</div>
 				<div id="popup5" class="modal-box">
 				  <div class="modal-header"> <a href="#" class="js-modal-close close">×</a>
-				    <h3>San Dieto</h3>
+				    <h3>San Diego</h3>
 				  </div>
 				  <div class="modal-body">
 				    <p>San Diego is a city on the Pacific coast of California known for its beaches, parks and warm climate. Immense Balboa Park is the site of the world-famous San Diego Zoo, as well as numerous art galleries, artist studios, museums and gardens.</br>
@@ -244,7 +242,7 @@
 				    </p>
 				  </div>
 				</div>
-			</div>
+			
 		</section>
 	</div>
 
