--- a/category-wine.html
+++ b/category-wine.html
@@ -34,7 +34,7 @@
 			<div class="menu">
 				<ul>
 					<!-- copy this part for svg hover effect -->
-					<li class="hidden_1"><a href="index.html"><svg version="1.1" id="home" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+					<li class="hidden_1 home"><a href="index.html"><svg version="1.1" id="home" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
 <path fill="none" stroke="#FFFFFF" stroke-miterlimit="10" d="M71,38.9V26.3c0-0.4-0.4-0.7-0.8-0.7H63c-0.4,0-0.8,0.3-0.8,0.7v3.5
 	c0,0.6-0.8,0.9-1.3,0.5l-10.4-9.2c-0.3-0.3-0.8-0.3-1.1,0l-29.3,26c-0.5,0.4-0.2,1.2,0.6,1.2h7c0.4,0,0.8,0.3,0.8,0.7v29.2
@@ -174,7 +174,7 @@
 		</section>
 		<section id="cwsection2">
 			<div class="Pop-trigger v-center2">
-				<a class="js-open-modal btn" href="#" data-modal-id="popup2"> Mendocino</a> 
+				<a class="js-open-modal btn" href="#" data-modal-id="popup2"> Mendocino </a> 
 			</div>
 			<div id="popup2" class="modal-box">
 			  <div class="modal-header"> <a href="#" class="js-modal-close close">×</a>
@@ -188,23 +188,22 @@
 		</section>
 		<section id="cwsection3">
 			<div class="Pop-trigger v-center2">
-				<a class="js-open-modal btn" href="#" data-modal-id="popup3">Santa Ynez</a> 
+				<a class="js-open-modal btn" href="#" data-modal-id="popup3"> Santa Ynez </a> 
 			</div>
 			<div id="popup3" class="modal-box">
 			  <div class="modal-header"> <a href="#" class="js-modal-close close">×</a>
 			    <h3>Santa Ynez Wine Country</h3>
 			  </div>
 			  <div class="modal-body">
-			    The Santa Ynez Valley, just north of Santa Barbara, is one of most diverse grape-growing regions in the county. Near the Pacific, fog and cool air rolls in at dusk, ideal for Chardonnay and Pinot Noir grapes. Thirty miles inland at Happy Canyon, it’s sunny and hot—perfect for Bordeaux varieties like Cab Franc and Merlot.
+			    <p>The Santa Ynez Valley, just north of Santa Barbara, is one of most diverse grape-growing regions in the county. Near the Pacific, fog and cool air rolls in at dusk, ideal for Chardonnay and Pinot Noir grapes. Thirty miles inland at Happy Canyon, it’s sunny and hot—perfect for Bordeaux varieties like Cab Franc and Merlot.
 				And scenic? How about rolling hills, endless vines, and ancient oaks to the horizon. Between the wines and the views, it’s easy to see why the region became a star in the 2004 surprise hit, Sideways. Take a self-guided tour of the film’s many shoot locations in Buellton, Los Alamos, and Los Olivos—even if you don’t remember the movie, these places are all worth a visit.
-
-			</p>
+				</p>
 			  </div>
 			</div>
 		</section>
 		<section id="cwsection4">
 			<div class="Pop-trigger v-center2">
-				<a class="js-open-modal btn" href="#" data-modal-id="popup4">Temecula Valley</a> 
+				<a class="js-open-modal btn" href="#" data-modal-id="popup4"> Temecula Valley </a> 
 			</div>
 			<div id="popup4" class="modal-box">
 			  <div class="modal-header"> <a href="#" class="js-modal-close close">×</a>
@@ -212,7 +211,7 @@
 			  </div>
 			  <div class="modal-body">
 			    <p>For many visitors, the Temecula Valley Wine Country is still a surprise. After all, a lot of people just don’t expect to see gently rolling hills blanketed scribed with rows of vineyards so close to the California desert. But the Temecula Valley has been producing top wines since the 1970s. And like the best vintages, this wine country just gets better with age.
-				It’s a diverse growing region, home to everything from cooler climate grapes like Chardonnay to such warm-weather loving varieties as Syrah and Grenache. The tasting experience is varied, too. </p>
+				It’s a diverse growing region, home to everything from cooler climate grapes like Chardonnay to such warm-weather loving varieties as Syrah and Grenache. The tasting experience is varied, too.</p>
 			  </div>
 			</div>
 		</section>
